--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Gugi|PT+Sans" rel="stylesheet">
+
     <!-- Fontawesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -19,15 +19,12 @@
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
     </script>
     <script src="/js/script.js"></script>
-    <title>MyContacts - Store your Contacts For Free</title>
+    <title>Toms Pizza - Delicious Pizza on the Way</title>
 </head>
 
 <body>
-    <div class="container border-bottom">
-        <a href="/" style="text-decoration:none;">
-            <h4 class="text-center mt-3" style="font-family: 'Gugi', cursive;"> <i
-                    class="far text-secondary fa-address-book"></i>
-                <span class="text-danger">My<span class="text-primary">Contacts</span></span>
-            </h4>
-        </a>
+    <div class="container">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis ab magnam cumque nemo velit recusandae magni
+        vitae officia ratione sapiente, dolorem eos ipsam numquam optio mollitia asperiores quas? Illum eligendi
+        voluptates ea quidem?
     </div>
