Setting up Homepage

--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -23,8 +23,9 @@
 </head>
 
 <body>
-    <div class="container">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis ab magnam cumque nemo velit recusandae magni
-        vitae officia ratione sapiente, dolorem eos ipsam numquam optio mollitia asperiores quas? Illum eligendi
-        voluptates ea quidem?
-    </div>
+    <!-- Image and text -->
+    <nav class="navbar navbar-light bg-success">
+        <a class="navbar-brand" href="#">
+            <img src="../../images/tomspizza_logo_dual.jpg" width="250" class="d-inline-block align-top img-fluid ml-4" alt="TomsPizza">
+        </a>
+    </nav>
