--- a/views/homepage/footer.ejs
+++ b/views/homepage/footer.ejs
@@ -1,4 +1,4 @@
-<style>
+<!-- <style>
 html{ height:97%; }
 body{ min-height:100%; padding:0; margin:0; position:relative; }
 
@@ -37,7 +37,7 @@ footer {
             </a>
         </div>
     </div>
-</footer>
+</footer> -->
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
