--- a/views/homepage/header.ejs
+++ b/views/homepage/header.ejs
@@ -63,10 +63,10 @@
                 Beverages
             </a>
             <a href="/login" class="mx-2 text-white">
-                Login
+                <i class="fas fa-sign-in-alt"></i>
             </a>
             <a href="/signup" class="mx-2 text-white">
-                Signup
+                <i class="fas fa-user-plus"></i>
             </a>
         </div>
     </nav>
