--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -1,3 +1,18 @@
+<%
+let color = [
+'info',
+'primary',
+'warning',
+'secondary',
+'danger',
+'dark',
+'info',
+'primary',
+'warning',
+'secondary'
+]
+%>
+
 <div class="container">
     <div class="heroDiv">
         <img src="../../images/2.png" alt="" class="img-fluid mt-3 hero">
@@ -5,30 +20,41 @@
 
     <div class="pizza mt-3">
         <h4 class="text-center">
-            <img src="../../images/pzIcon.png" alt="" class="img-fluid"
-                style="width: 30px;">
+            <img src="../../images/pzIcon.png" alt="" class="img-fluid" style="width: 30px;">
             <span class="deliciousPizza">Delicious Pizza</span>
         </h4>
-    
-        <% for(let i = 0; i <= data.length-1; i++) {%>
-
-        <div class="card">
-            <img class="card-img-top" src="../../products/images/pizza/<%= data[i].pr_img %>">
-            <div class="card-body">
-                <h5 class="card-title"><%= data[i].pr_name %></h5>
-                <p class="card-text"><%= data[i].pr_info %></p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">R: <%= data[i].pr_price.size_reg %></li>
-                <li class="list-group-item">M: <%= data[i].pr_price.size_med %></li>
-                <li class="list-group-item">L: <%= data[i].pr_price.size_lrg %></li>
-            </ul>
-            <div class="card-body">
-                <a href="#" class="card-link">
-                    Add to cart
-                </a>                
-            </div>
-        </div>
+        <div class="row">
+            <% for(let i = 0; i <= data.length-3; i+=2) {%>
+            <span class="text-center col-lg-6">
+                <div class="row">
+                    <div class="col-6">
+                        <span class="text-center">
+                            <img class="my-2 img-fluid" src="../../products/images/pizza/<%= data[i].pr_img %>" style="width: 140px">
+                            <h6 class="" style="height: 30px"><%= data[i].pr_name %></h6>
+                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[i].pr_info %></p>
+                            <span>
+                                <strong>R:</strong> ₹<%= data[i].pr_price.size_reg %></li>
+                                <strong>M:</strong> ₹<%= data[i].pr_price.size_med %></li>
+                                <strong>L:</strong> ₹<%= data[i].pr_price.size_lrg %></li>
+                            </span>
+                        </span>
+                    </div>
+                    <div class="col-6">
+                        <span class="text-center">
+                            <img class="my-2" src="../../products/images/pizza/<%= data[i+1].pr_img %>" style="width: 140px">
+                            <h6 class="" style="height: 30px"><%= data[i+1].pr_name %></h6>
+                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[i+1].pr_info %></p>
+                            <span>
+                                <strong>R:</strong> ₹<%= data[i+1].pr_price.size_reg %></li>
+                                <strong>M:</strong> ₹<%= data[i+1].pr_price.size_med %></li>
+                                <strong>L:</strong> ₹<%= data[i+1].pr_price.size_lrg %></li>
+                            </span>
+                        </span>
+                    </div>
+                </div>
+            </span>
+            <%}%>    
     </div>
-    <%}%>
+    </div>
+    
 </div>
