--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -29,7 +29,7 @@ let color = [
                 <div class="row">
                     <div class="col-6">
                         <span class="text-center">
-                            <img class="my-2 img-fluid" src="../../products/images/pizza/<%= data[i].pr_img %>" style="width: 140px">
+                            <img class="my-2 cardImg<%=i%> img-fluid" src="../../products/images/pizza/<%= data[i].pr_img %>" style="width: 140px">
                             <h6 class="" style="height: 30px"><%= data[i].pr_name %></h6>
                             <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[i].pr_info %></p>
                             <span>
@@ -41,7 +41,7 @@ let color = [
                     </div>
                     <div class="col-6">
                         <span class="text-center">
-                            <img class="my-2" src="../../products/images/pizza/<%= data[i+1].pr_img %>" style="width: 140px">
+                            <img class="my-2 cardImg<%=i%>" src="../../products/images/pizza/<%= data[i+1].pr_img %>" style="width: 140px">
                             <h6 class="" style="height: 30px"><%= data[i+1].pr_name %></h6>
                             <p class="text-muted" style="font-size: 12px; height: 60px"><%= data[i+1].pr_info %></p>
                             <span>
