Burger panel fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,9 @@
 .deliciousPizza{    
     border-bottom: 2px solid orange;
 }
+.crispyBurgers{    
+    border-bottom: 2px solid orange;
+}
 .cardImg{
     width: 140px;
 }
