--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -25,8 +25,7 @@ let color = [
                 <!-- Pizza panel first row start -->
                 <div class="row">
                     <div class="col-6 py-2">
-                        <div class="text-center" name="<%=i%>" onmouseover="showBTN(this)"
-                            onmouseout="hideBTN(this)">
+                        <div class="text-center" name="<%=i%>" onmouseover="showBTN(this)" onmouseout="hideBTN(this)">
                             <img class="my-2 cardImg cardImg<%=i%>"
                                 src="../../products/images/pizza/<%= data[i].pr_img %>">
 
@@ -63,8 +62,7 @@ let color = [
 
                     <!-- Pizza panel second row start -->
                     <div class="col-6 py-2">
-                        <div class="text-center" name="<%=i+1%>" onmouseover="showBTN(this)"
-                            onmouseout="hideBTN(this)">
+                        <div class="text-center" name="<%=i+1%>" onmouseover="showBTN(this)" onmouseout="hideBTN(this)">
                             <img class="my-2 cardImg cardImg<%=i+1%>"
                                 src="../../products/images/pizza/<%= data[i+1].pr_img %>">
 
@@ -124,19 +122,7 @@ let color = [
                                 src="../../products/images/burgers/<%= burgers[i].pr_img %>">
 
                             <h6 style="height: 30px"><%= burgers[i].pr_name %></h6>
-
-                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= burgers[i].pr_info %></p>
-
-                            <table class="w-100">
-                                <thead>
-                                    <tr>
-                                        <th>Price</th>
-                                        <td>₹<%= burgers[i].pr_price %></td>
-                                    </tr>
-                                </thead>
-                            </table>
-
-
+                            <p> <strong>Price: </strong>₹<%= burgers[i].pr_price%> </p>                            
                             <button class="mt-1 w-100 btn btn-danger" name="<%=burgers[i].pr_id%>"
                                 onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=4*(j)%>">
                                 Add to Cart
@@ -154,19 +140,7 @@ let color = [
                                 src="../../products/images/burgers/<%= burgers[i+1].pr_img %>">
 
                             <h6 style="height: 30px"><%= burgers[i+1].pr_name %></h6>
-
-                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= burgers[i+1].pr_info %></p>
-
-                            <table class="w-100">
-                                <thead>
-                                    <tr>
-                                        <th>Price</th>
-                                        <td>₹<%= burgers[i+1].pr_price %></td>
-                                    </tr>
-                                </thead>
-                            </table>
-
-
+                            <p> <strong>Price: </strong>₹<%= burgers[i+1].pr_price%> </p>
                             <button class="mt-1 w-100 btn btn-danger" name="<%=burgers[i+1].pr_id%>"
                                 onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=4*(j+1)%>">
                                 Add to Cart
