--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -155,4 +155,61 @@ let color = [
     </div>
     <!-- Burgers panel end-->
     </div>   
+
+    <!-- Beverages start -->    
+    <div class="beverages mt-3">
+        <h4 class="text-center">
+            <img src="../../images/bvgIcon.png" class="img-fluid" style="width: 30px;">
+            <span class="coolBeverages">Cool Beverages</span>
+        </h4>
+        <!-- beverages Heading END -->
+
+        <!-- beverages panel start -->
+        <div class="row">
+            <% for(let i = 0,j=5; i <= 3; i+=2,j+=2) {%>
+            <span class="text-center col-lg-6">
+                <!-- beverages panel first row start -->
+                <div class="row">
+                    <div class="col-6 py-2">
+                        <div class="text-center" name="<%=4*(j)%>" onmouseover="showBTN(this)"
+                            onmouseout="hideBTN(this)">
+                            <img class="my-2 cardImg cardImg<%=i%>"
+                                src="../../products/images/beverages/<%= beverages[i].pr_img %>">
+
+                            <h6 style="height: 30px"><%= beverages[i].pr_name %></h6>
+                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= beverages[i].pr_info %></p>
+                            <p> <strong>Price: </strong>₹<%= beverages[i].pr_price%> </p>                            
+                            <button class="mt-1 w-100 btn btn-danger" name="<%=beverages[i].pr_id%>"
+                                onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=4*(j)%>">
+                                Add to Cart
+                                <i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- beverages panel first row end -->
+
+                    <!-- beverages panel second row start -->
+                    <div class="col-6 py-2">
+                        <div class="text-center" name="<%=4*(j+1)%>" onmouseover="showBTN(this)"
+                            onmouseout="hideBTN(this)">
+                            <img class="my-2 cardImg cardImg<%=i%>"
+                                src="../../products/images/beverages/<%= beverages[i+1].pr_img %>">
+
+                            <h6 style="height: 30px"><%= beverages[i+1].pr_name %></h6>
+                            <p class="text-muted" style="font-size: 12px; height: 60px"><%= beverages[i+1].pr_info %></p>
+                            <p> <strong>Price: </strong>₹<%= beverages[i+1].pr_price%> </p>
+                            <button class="mt-1 w-100 btn btn-danger" name="<%=beverages[i+1].pr_id%>"
+                                onclick="addToCart(this)" style="visibility: hidden;" id="addToCartBtn<%=4*(j+1)%>">
+                                Add to Cart
+                                <i class="fas fa-shopping-cart"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- beverages panel second row end -->
+                </div>
+            </span>
+            <%}%>    
+    </div>
+    <!-- beverages panel end-->
+    </div> 
 </div>
