--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -186,9 +186,9 @@ let color = [
                             </button>
                         </div>
                     </div>
-                    <!-- beverages panel first row end -->
+                    <!-- Beverages panel first row end -->
 
-                    <!-- beverages panel second row start -->
+                    <!-- Beverages panel second row start -->
                     <div class="col-6 py-2">
                         <div class="text-center" name="<%=4*(j+1)%>" onmouseover="showBTN(this)"
                             onmouseout="hideBTN(this)">
