--- a/views/homepage/section.ejs
+++ b/views/homepage/section.ejs
@@ -14,7 +14,7 @@ let color = [
     <div class="pizza mt-3">
         <h4 class="text-center">
             <img src="../../images/pzIcon.png" alt="" class="img-fluid" style="width: 30px;">
-            <span class="deliciousPizza">Delicious Pizza</span>
+            <span class="heading">Delicious Pizza</span>
         </h4>
         <!-- Delicious Pizza Heading END -->
 
@@ -105,7 +105,7 @@ let color = [
     <div class="burgers mt-3">
         <h4 class="text-center">
             <img src="../../images/bgrIcon.png" class="img-fluid" style="width: 30px;">
-            <span class="crispyBurgers">Crispy Burgers</span>
+            <span class="heading">Crispy Burgers</span>
         </h4>
         <!-- Crispy Burgers Heading END -->
 
@@ -160,7 +160,7 @@ let color = [
     <div class="beverages mt-3">
         <h4 class="text-center">
             <img src="../../images/bvgIcon.png" class="img-fluid" style="width: 30px;">
-            <span class="coolBeverages">Cool Beverages</span>
+            <span class="heading">Cool Beverages</span>
         </h4>
         <!-- beverages Heading END -->
 
